[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.9"
rocket_codegen = "0.4.9"
rocket_contrib = "0.4.9"
diesel = {version = "1.4.5", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"